# Semi-Automatic-LabelingTool

./: CMakeLists.txt  LICENSE  README.md  SemiAutomaticLabelingTool.cpp  SemiAutomaticLabelingTool.h  SemiAutomaticLabelingTool.py  config_LabelTool.yaml  install_python_dependency.sh  install_ubuntu_dependency.sh  requirements.txt  run_LabelingTool.sh
